{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 20,
  "lineage": "7c8175c0-b8dc-213a-4cba-1b0070224385",
  "resources": [
    {
      "module": "module.azure_firewall_01",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "az-firewall-pol01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [],
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/firewallPolicies/az-conn-pr-eastus2-afw-pol01",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "eastus2",
            "name": "az-conn-pr-eastus2-afw-pol01",
            "private_ip_ranges": null,
            "resource_group_name": "az-conn-pr-eastus2-net-rg",
            "rule_collection_groups": [],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": null,
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg",
            "module.hub-vnet.azurerm_subnet.subnet",
            "module.hub-vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.azure_firewall_01",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "az-collection-pol01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "Allowed_websites",
                "priority": 500,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": null,
                    "destination_fqdn_tags": null,
                    "destination_fqdns": [
                      "bing.co.uk"
                    ],
                    "destination_urls": null,
                    "name": "Allowed_website_01",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      },
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": null,
                    "terminate_tls": false,
                    "web_categories": null
                  },
                  {
                    "description": "",
                    "destination_addresses": null,
                    "destination_fqdn_tags": null,
                    "destination_fqdns": [
                      "*.bing.com"
                    ],
                    "destination_urls": null,
                    "name": "Allowed_website_02",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      },
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": null,
                    "terminate_tls": false,
                    "web_categories": null
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/firewallPolicies/az-conn-pr-eastus2-afw-pol01",
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/firewallPolicies/az-conn-pr-eastus2-afw-pol01/ruleCollectionGroups/az-conn-pr-eastus2-afw-coll-pol01",
            "name": "az-conn-pr-eastus2-afw-coll-pol01",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Deny",
                "name": "Blocked_Network_Rules",
                "priority": 1000,
                "rule": [
                  {
                    "destination_addresses": [
                      "10.8.8.8",
                      "8.10.4.4"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "11"
                    ],
                    "name": "Blocked_rule_1",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "10.8.8.8",
                      "8.10.4.4"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "21"
                    ],
                    "name": "Blocked_rule_2",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "10.8.8.8",
                      "8.10.4.4"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "11"
                    ],
                    "name": "Blocked_rule_3",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "10.8.8.8",
                      "8.10.4.4"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "21"
                    ],
                    "name": "Blocked_rule_4",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "Allowed_Network_Rules",
                "priority": 2000,
                "rule": [
                  {
                    "destination_addresses": [
                      "172.21.1.10",
                      "8.10.4.4"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "11"
                    ],
                    "name": "Allowed_Network_rule_1",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "172.21.1.10",
                      "8.10.4.4"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "21"
                    ],
                    "name": "Allowed_Network_rule_2",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "172.21.1.10",
                      "8.10.4.4"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "11"
                    ],
                    "name": "Allowed_Network_rule_3",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "172.21.1.10",
                      "8.10.4.4"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "21"
                    ],
                    "name": "Allowed_Network_rule_4",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  }
                ]
              }
            ],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure_firewall_01.azurerm_firewall_policy.az-firewall-pol01",
            "module.hub-resourcegroup.azurerm_resource_group.az-rg",
            "module.hub-vnet.azurerm_subnet.subnet",
            "module.hub-vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub-vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ApplicationGatewaySubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/virtualNetworks/az-conn-pr-eastus2-vnet/subnets/ApplicationGatewaySubnet",
            "name": "ApplicationGatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az-conn-pr-eastus2-net-rg",
            "virtual_network_name": "az-conn-pr-eastus2-vnet"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg",
            "module.hub-vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "AzureBastionSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/virtualNetworks/az-conn-pr-eastus2-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az-conn-pr-eastus2-net-rg",
            "virtual_network_name": "az-conn-pr-eastus2-vnet"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg",
            "module.hub-vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "AzureFirewallSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/virtualNetworks/az-conn-pr-eastus2-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az-conn-pr-eastus2-net-rg",
            "virtual_network_name": "az-conn-pr-eastus2-vnet"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg",
            "module.hub-vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "GatewaySubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/virtualNetworks/az-conn-pr-eastus2-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az-conn-pr-eastus2-net-rg",
            "virtual_network_name": "az-conn-pr-eastus2-vnet"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg",
            "module.hub-vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "JumpboxSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/virtualNetworks/az-conn-pr-eastus2-vnet/subnets/JumpboxSubnet",
            "name": "JumpboxSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az-conn-pr-eastus2-net-rg",
            "virtual_network_name": "az-conn-pr-eastus2-vnet"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg",
            "module.hub-vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub-vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.50.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e5650596-a7b4-487a-ba84-aa97c536a7e0",
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/virtualNetworks/az-conn-pr-eastus2-vnet",
            "location": "eastus2",
            "name": "az-conn-pr-eastus2-vnet",
            "resource_group_name": "az-conn-pr-eastus2-net-rg"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "module": "module.public_ip_01",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/publicIPAddresses/az-conn-pr-eastus2-vgw-pip01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.119.175.87",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "az-conn-pr-eastus2-vgw-pip01",
            "resource_group_name": "az-conn-pr-eastus2-net-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "module": "module.public_ip_02",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/publicIPAddresses/az-conn-pr-eastus2-agw-pip02",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.122.58.207",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "az-conn-pr-eastus2-agw-pip02",
            "resource_group_name": "az-conn-pr-eastus2-net-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "module": "module.public_ip_03",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/publicIPAddresses/az-conn-pr-eastus2-afw-pip03",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.122.58.133",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "az-conn-pr-eastus2-afw-pip03",
            "resource_group_name": "az-conn-pr-eastus2-net-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "module": "module.public_ip_04",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/publicIPAddresses/az-conn-pr-eastus2-afw-pip04",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.122.58.188",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "az-conn-pr-eastus2-afw-pip04",
            "resource_group_name": "az-conn-pr-eastus2-net-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-jumpbox-01",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-mgmt-pr-eastus2-rg/providers/Microsoft.Network/networkInterfaces/aznetbrjump01-nic",
            "internal_domain_name_suffix": "sycwlznuu33erouevkl2knvh2a.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.50.5.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2c56bee4-3b87-4f12-bb43-0465106f00c4/resourceGroups/az-conn-pr-eastus2-net-rg/providers/Microsoft.Network/virtualNetworks/az-conn-pr-eastus2-vnet/subnets/JumpboxSubnet"
              }
            ],
            "location": "eastus2",
            "name": "aznetbrjump01-nic",
            "private_ip_address": "10.50.5.4",
            "private_ip_addresses": [
              "10.50.5.4"
            ],
            "resource_group_name": "az-mgmt-pr-eastus2-rg"
          },
          "dependencies": [
            "module.hub-resourcegroup.azurerm_resource_group.az-rg",
            "module.hub-vnet.azurerm_subnet.subnet",
            "module.hub-vnet.azurerm_virtual_network.vnet",
            "module.mgmt-resourcegroup.azurerm_resource_group.az-rg"
          ]
        }
      ]
    }
  ]
}